# useless_package

./: README.md  pyproject.toml
useless_package/: __init__.py
