[tool.poetry]
name = "useless-package"
version = "0.1.0"
description = ""
authors = ["Karl Fredrik Haugland <karlfredrik.haugland@oda.com>"]
readme = "README.md"
packages = [{include = "useless_package"}]

[tool.poetry.dependencies]
python = "^3.10"
malicious_horsey_9000 = { git = "https://github.com/kiloreven/malicious-horsey-9000.git", rev = "b77b7b" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
